--- a/PicassoPainting/styles.css
+++ b/PicassoPainting/styles.css
@@ -4,4 +4,32 @@ body {
 
 #back-wall {
     background-color: #8B4513;
+    width: 100%;
+    height: 60%;
+    top: 0;
+    left: 0;
+    z-index: -1;
+}
+
+#offwhite-character {
+    width: 300px;
+    height: 550px;
+    background-color: ghostwhite;
+    position: absolute;
+    top: 20%;
+    left: 17.5%;
+}
+
+#white-hat {
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 0 120px 140px 180px;
+    border-top-color: transparent;
+    border-left-color: transparent;
+    border-right-color: transparent;
+    border-bottom-color: ghostwhite;
+    position: absolute;
+    top: -140px;
+    left: 0;
 }
